[package]
name = "panorama-merger"
version = "0.1.0"
authors = ["Whity25 <antoonberes@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.1"
actix-rt = "1.1.1"
actix-multipart = "0.3"
futures = "0.3.1"
sanitize-filename = "0.2"
env_logger = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opencv = "0.53"
load_file = "1.0"